# voice-flow

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  explanation.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: ARCHITECTURAL_OVERVIEW.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  check_errors.txt  errors.txt  errors_v2.txt  errors_v3.txt  errors_v4.txt  errors_v5.json  errors_v6.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
